# wasmtime

.github/workflows/: main.yml
ci/: build-test-matrix.js
crates/wasi-nn/: Cargo.toml
crates/wasi-nn/examples/stable-diffusion/: Cargo.toml
crates/wasi-nn/examples/stable-diffusion/src/: main.rs
crates/wasi-nn/examples/stable-diffusion/src/schedulers/: integrate.rs  lms_discrete.rs  mod.rs
crates/wasi-nn/src/backend/: winml.rs
crates/wasi-nn/tests/: all.rs
