[package]
name = "wasi-nn-example-sd"
version = "0.1.0"
edition = "2021"
authors = ["The Wasmtime Project Developers"]
readme = "README.md"
publish = false

[dependencies]
wit-bindgen = { version = "0.25.0" }
wit-bindgen-rt = { version = "0.25.0" }
image = { version = "0.25.2", default-features = false, features = ["jpeg"] }
ndarray = "0.16.1"
instant-clip-tokenizer = { version = "0.1.0", features = ["ndarray"] }
rand = {version="0.8.5", features=["std_rng"]}
half = "2.4.1"
# diffusers = {path="E:\\Code\\diffusers-rs"}

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:stable-diffusion"

[package.metadata.component.target.dependencies]

# This crate is built with the wasm32-wasip1 target, so it's separate
# from the main Wasmtime build, so use this directive to exclude it
# from the parent directory's workspace.
[workspace]
